--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,6 @@
-.App { 
-    background: #541545
-}
+.container {
+    display: flex; 
+    justify-content: center; 
+    overflow: hidden;
+    background: linear-gradient(357deg, rgba(255,255,255,1) 0%, rgba(251,8,169,1) 100%)
+  }
