--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,7 +6,7 @@
     overflow: hidden; /* Ensures the content is not revealed until the animation */
     border-right: .15em solid #ec4899; /* The typwriter cursor */
     white-space: nowrap; /* Keeps the content on a single line */
-    margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+    margin: 15px auto; /* Gives that scrolling effect as the typing happens */
     letter-spacing: .15em; /* Adjust as needed */
     animation: 
       typing 3.5s steps(40, end),
